--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,14 @@
 version: "3"
-
 services:
   apisix:
-    image: apache/apisix:latest
-    restart: always
+    image: apache/apisix:3.1.0-debian
     volumes:
-      - ./apisix_log:/usr/local/apisix/logs
-      - ./apisix_conf/config.yaml:/usr/local/apisix/conf/config.yaml:ro
-    depends_on:
-      - etcd
+      - ./apisix/config.yml:/usr/local/apisix/conf/config.yaml:ro
+      - ./apisix/apisix.yml:/usr/local/apisix/conf/apisix.yaml:ro
     ports:
-      - "9180:9180/tcp"
-      - "9080:9080/tcp"
-      - "9091:9091/tcp"
-      - "9443:9443/tcp"
-      - "9092:9092/tcp"
-    networks:
-      apisix:
-  
-  apisix-dashboard:
-    image: apache/apisix-dashboard:3.0.1-alpine
-    restart: always
-    volumes:
-    - ./dashboard_conf/conf.yaml:/usr/local/apisix-dashboard/conf/conf.yaml
-    ports:
-    - "9000:9000"
-    networks:
-      apisix:    
-
-  etcd:
-    image: bitnami/etcd:3.4.15
-    restart: always
-    volumes:
-      - etcd_data:/bitnami/etcd
+      - "9080:9080"
     environment:
-      ETCD_ENABLE_V2: "true"
-      ALLOW_NONE_AUTHENTICATION: "yes"
-      ETCD_ADVERTISE_CLIENT_URLS: "http://etcd:2379"
-      ETCD_LISTEN_CLIENT_URLS: "http://0.0.0.0:2379"
-    ports:
-      - "12379:2379/tcp"
+      - GATEWAY_PORT=9080
     networks:
       apisix:
 
@@ -53,6 +22,3 @@ services:
 networks:
   apisix:
     driver: bridge
-volumes:
-  etcd_data:
-    driver: local
